Updated card-description class

--- a/style/styles.css
+++ b/style/styles.css
@@ -76,7 +76,7 @@ img {
   text-transform: capitalize;
 }
 
-.card-description:first-letter {
+.card-description {
   text-transform: capitalize;
 }
 
